tests/integration/features/options/options_per_document/AUTO_LEVELS/10_option_is_on_but_section_level_is_provided/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail
CHECK: error: [SECTION].LEVEL field is provided. This contradicts to the option [DOCUMENT].OPTIONS.AUTO_LEVELS set to On. Section: SDocSection{{.*}}.
